# Earth-Data-Visualize

./: .gitignore  MANIFEST.in  README.md  setup.cfg  test.py
research/: carra_1993_mountain_fall.py  efficient_test.py  generic.py  pcolor_testing.py  test.py
research/areas/: test_area_grid.py  test_areas_code.py  useful_code.py
research/carra_conversion/: carra_conversion.py  data_format_testing.py
research/converage_aprils_single/: histogram_info_save.py  histogram_plotting.py
research/coverage_six-months_single/: SIX_coverage_over_years.py  SIX_histogram_info_save.py  SIX_histogram_plotting.py
research/frac_below/: frac_below.py  frac_below_april_22.py  memory_efficient_frac_below.py  pickle_to_mat.py
research/frac_below_april_2022/: frac_below_april_22.py
research/precomputation/: era5_wind_spd.py  test_precomputation.py
research/quick_views/: lat_lon_test.py  quick_views.py
research/redoing_frac_below/: day_ts_test.py  frac_below_redone.py  memory_efficient_frac_below.py  memory_efficient_frac_below_2.py  save_ordered_wind_speed.py  testing.py  testing_two.py  view_new_fracs.py
research/reorganize_ascat/: re_group.py  reorganize.py
src/edcl/: __init__.py  collections.py  config.py  constants.py  create_vector_collections.py  data_inter.py  data_inter_legacy.py  edcl_collections.py  edcl_formatting.py  edcl_info_classes.py  edcl_types.py  efficient_dev.py  formatting.py  grid_data_input.py  grid_data_io_util.py  info.json  info_classes.py  stats.py  types.py  util.py  (+1 more)
src/edcl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
(+3 files in other folders)
