[metadata]
name = edcl
version = 0.1.0
author = John Wood
author_email = johnh.wood@mail.utoronto.ca
url = https://www.google.com
description = Example package pls work
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src